Locking header done bar testing that the templates compile (they won't) and adding Tracy later on

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Libs and exe
+option(TRACY_ENABLE "" ON)
+option(TRACY_ON_DEMAND "" ON)
 add_subdirectory(External/tracy)
 add_subdirectory(Source)
 add_subdirectory(Source/Tests)
