--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,6 +1,4 @@
-add_library(Lib_Pool Locking.cpp
-				   	 Semaphore.cpp
-				     Futex.cpp) 
+add_library(Lib_Pool Jobs.cpp) 
 
 target_include_directories (Lib_Pool PUBLIC "${CMAKE_SOURCE_DIR}/Include")
 target_include_directories (Lib_Pool PUBLIC "${CMAKE_SOURCE_DIR}/External/eigen")
